tests/baselines/reference/extendArray.errors.txt
==== tests/cases/compiler/extendArray.ts (2 errors) ====
    var a = [1,2];
    a.forEach(function (v,i,a) {});
    
    
    declare module _Core {
      interface Array {
        collect(fn:(e:_element) => _element[]) : any[];
                      ~~~~~~~~
!!! extendArray.ts(7,19): error TS2095: Could not find symbol '_element'.
                                   ~~~~~~~~
!!! extendArray.ts(7,32): error TS2095: Could not find symbol '_element'.
      }
    }
    
    
    var arr = (<any>Array).prototype;
    arr.collect = function (fn) {
        var res = [];
        for (var i = 0; i < this.length; ++i) {
            var tmp = fn(this[i]);
            for (var j = 0; j < tmp.length; ++j) {
                res.push(tmp[j]);
            }
        }
        return res;
    };
    